Quote block wrap fix

--- a/src/routes/entries/rebis-theory/layout.css
+++ b/src/routes/entries/rebis-theory/layout.css
@@ -200,6 +200,7 @@ code {
   font-family: "Open Sans";
   background-color: hsl(343, 10%, 27%);
   /* background-color: hsla(23, 100%, 59%, 0.22); */
+  /* background-color: #564443; */
   color: hsl(34, 62%, 64%);
 
   border-color: hsla(8, 75%, 45%, 0);
@@ -209,8 +210,11 @@ code {
   border-style: solid;
   border-width: 1px;
 
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+
   margin-top: 6px;
-  padding: 1px 4px;
+  padding: 2px 4px;
 }
 
 div.code-conlang {
